[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mito-pd"
version = "0.1.0"
description = "Mitochondrial Gene Expression in PD"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

